hphp/test/zend/good/tests/classes/abstract_class.php.expectf
Call to function show()

Fatal error: Cannot instantiate abstract class fail in %s/abstract_class.php on line 16
